# IsaacLab-uv

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  dev.sh  pyproject.toml  run.sh
.github/workflows/: main.yml
config/: extension.toml
scripts/: compatibility_check.sh  list_envs.py  play.sh  random_agent.py  sync_logs.sh  train.sh  update_isaaclab.sh  zero_agent.py
scripts/rsl_rl/: play.py  train.py
src/expt/: ui_extension_example.py
src/expt/tasks/manager_based/expt/: __init__.py  expt_env_cfg.py
